--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 </div>
             </nav>
         </header>
+        <!-- HERO SECTION -->
         <section id="hero" class="flex flex-column">
             <div class="hero-text">
                 <h1>
@@ -73,6 +74,31 @@
             </div>
             <div class="hero-img">
                 <img src="./assets/img/hero-img.png" alt="gato" class="img-100" />
+            </div>
+        </section>
+
+        <!-- QUOTE -->
+        <div class="quote">
+            <h2 class="center">
+                “Respetar a los animales es una obligación, amarlos es un privilegio”.
+            </h2>
+        </div>
+
+        <!-- ABOUT -->
+        <section id="about" class="flex flex-column">
+            <div class="about-img">
+                <img
+                    src="./assets/img/about-img.png"
+                    alt="gato caminando"
+                    class="img-100"
+                />
+            </div>
+            <div class="about-text">
+                <h2 class="center">¿Qué es <span class="primary-color">N</span>elo?</h2>
+                <p class="center">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
             </div>
         </section>
     </body>
