--- a/index.html
+++ b/index.html
@@ -101,5 +101,8 @@
                 </p>
             </div>
         </section>
+
+        <!-- SERVICIOS -->
+        <section id="servicios"></section>
     </body>
 </html>
