--- a/index.html
+++ b/index.html
@@ -103,6 +103,97 @@
         </section>
 
         <!-- SERVICIOS -->
-        <section id="servicios"></section>
+        <section id="servicios">
+            <h2 class="services-title center">
+                NUESTROS <span class="primary-color">SERVICIOS</span>
+            </h2>
+            <p class="services-description center">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <div class="cards flex flex-column">
+                <div class="card">
+                    <img src="./assets/img/Consulta.png" alt="consulta" class="img-100" />
+                    <h3 class="primary-color center">Consultas</h3>
+                    <p class="center">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="card">
+                    <img
+                        src="./assets/img/vacunacion.png"
+                        alt="consulta"
+                        class="img-100"
+                    />
+                    <h3 class="primary-color center">Vacunación</h3>
+                    <p class="center">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="card">
+                    <img
+                        src="./assets/img/emergencias.png"
+                        alt="consulta"
+                        class="img-100"
+                    />
+                    <h3 class="primary-color center">Emergencias</h3>
+                    <p class="center">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- CONTACTO -->
+        <section id="contacto">
+            <h3 class="contact-title center">Contacto</h3>
+
+            <div class="contact-cards flex flex-column">
+                <div class="form">
+                    <h4 class="center">¡Envíanos un mensaje!</h4>
+                    <form>
+                        <input type="text" placeholder="Nombre" />
+                        <input type="e-mail" placeholder="E-mail" />
+                        <input type="text" placeholder="teléfono" />
+                        <textarea
+                            name=""
+                            id=""
+                            cols="30"
+                            rows="3"
+                            placeholder="Mensaje"
+                        ></textarea>
+                        <button type="submit" class="btn">Enviar</button>
+                    </form>
+                </div>
+                <div class="sucursales">
+                    <h4>Sucursales</h4>
+                    <p>
+                        <span>Sucursal los andes</span> <br />
+                        Sucursal Los Andes Panamá, Centro Comercial Los Andes al lado de
+                        Banesco <br />
+                        Atención: Lunes a Domingo - 8 a.m. - 10 p.m.
+                    </p>
+                    <p>
+                        <span>Sucursal los andes</span> <br />
+                        Sucursal Los Andes Panamá, Centro Comercial Los Andes al lado de
+                        Banesco <br />
+                        Atención: Lunes a Domingo - 8 a.m. - 10 p.m.
+                    </p>
+                    <p>
+                        <span>Sucursal los andes</span> <br />
+                        Sucursal Los Andes Panamá, Centro Comercial Los Andes al lado de
+                        Banesco <br />
+                        Atención: Lunes a Domingo - 8 a.m. - 10 p.m.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- FOOTER -->
+        <footer>
+            <h5 class="center">Todos los derechos reservados</h5>
+        </footer>
     </body>
 </html>
