--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -21,7 +21,7 @@
       <img
         class="fondo-login-1-icon"
         alt=""
-        src="public/fondo-login-1@2x.png"
+        src="../assets/img/logo.png"
       />
       <footer class="footer-login">
         <div class="rectangle-div"></div>
