--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -48,7 +48,7 @@
       </form>
       <header class="navbar-header">
         <div class="header-div"></div>
-        <img class="nelo-logo-icon" alt="" src="public/nelo-logo@2x.png" />
+        <img class="nelo-logo-icon" alt="" src="../assets/img/logo.png" />
         <div class="menu-div">
           <button class="home-button">
             <div class="home-rectangle-div"></div>
