--- a/pages/login.html
+++ b/pages/login.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Login Form Design One | Fazt</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="../assets/styles.css">
   </head>
   <body>
     <body>
         <header>
             <nav class="flex justify-around">
                 <div class="logo">
-                    <img src="./assets/img/logo.png" alt="logo" width="100px" />
+                    <img src="../assets/img/logo.png" alt="logo" width="100px" />
                 </div>
                 <!-- MENU MOBILE -->
                 <div class="flex align-center account-btns">
