--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title></title>
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./registrarse.css" />
+    <link rel="stylesheet" href="../assets/styles.css" />
 
     <link
       rel="stylesheet"
