--- a/pages/profile.html
+++ b/pages/profile.html
@@ -61,5 +61,9 @@
                 <button class="btn-selected form-btn">Guardar Cambios</button>
             </div>
         </div>
+        <!-- FOOTER -->
+        <footer>
+            <h5 class="center">Todos los derechos reservados</h5>
+        </footer>
 </body>
 </html>
