--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#about">
                             <button>Acerca de</button>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#contacto">
                             <button>Contacto</button>
                         </a>
                     </li>
@@ -48,10 +48,10 @@
                 </button>
 
                 <div class="flex align-center account-btns">
-                    <a href="#">
+                    <a href="./pages/login.html">
                         <button class="btn-selected">Login</button>
                     </a>
-                    <a href="#">
+                    <a href="./pages/registrarse.html">
                         <button class="btn-selected">Register</button>
                     </a>
                 </div>
