--- a/pages/login.html
+++ b/pages/login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Login Form Design One | Fazt</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../assets/styles.css">
   </head>
   <body>
@@ -14,34 +14,33 @@
                 </div>
                 <!-- MENU MOBILE -->
                 <div class="flex align-center account-btns">
-                    <a href="#">
-                        <button class="btn-selected">Login</button>
+                    <a href="../index.html">
+                        <button class="btn-selected">Home</button>
                     </a>
-                    <a href="#">
+                    <a href="./registrarse.html">
                         <button class="btn-selected">Register</button>
                     </a>
                 </div>
             </nav>
         </header>
 
- <section>
+ <section id="login">
     <div class="login-box">
       <h1>Iniciar Sesion </h1>
       <form>
         <!-- USERNAME INPUT -->
         <label for="email">Correo electronico</label>
-        <input type="text" placeholder="">
+        <input type="text" placeholder="email">
         <label for="password">Contraseña</label>
-        <input type="password" placeholder="">
+        <input type="password" placeholder="password">
         <input type="submit" value="Iniciar">
         <input type="submit" value="register">
       </form>
     </div>
 </section>
-<footer class="footer-login">
-    <div class="rectangle-div"></div>
-    <h1 class="info-footer-h1">Todos los derechos reservados</h1>
-  </footer>
+<footer>
+  <h5 class="center">Todos los derechos reservados</h5>
+</footer>
 </footer>
   </body>
 </html>
