--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -17,16 +17,65 @@
     />
   </head>
   <body>
+    <header>
+      <nav class="flex justify-around">
+          <div class="logo">
+              <img src="../assets/img/logo.png" alt="logo" width="100px" />
+          </div>
+          <!-- MENU PANTALLAS MEDIAS HACIA ADELANTE -->
+          <ul class="flex align-center">
+              <li>
+                  <a href="../index.html">
+                      <button class="btn-selected">Home</button>
+                  </a>
+              </li>
+              <li>
+                  <a href="#about">
+                      <button>Acerca de</button>
+                  </a>
+              </li>
+              <li>
+                  <a href="#contacto">
+                      <button>Contacto</button>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <button>Ranking</button>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <button>Reportes</button>
+                  </a>
+              </li>
+          </ul>
+          <!-- MENU MOBILE -->
+          <button class="menu-btn">
+              <img src="./assets/img/menu-icon.svg" alt="" width="20px" />
+          </button>
+
+          <div class="flex align-center account-btns">
+              <a href="./login.html">
+                  <button class="btn-selected">Login</button>
+              </a>
+          </div>
+      </nav>
+  </header>
+    <!-- <header class="navbar-header">
+      <div class="header-div"></div>
+      <img class="nelo-logo-icon" alt="" src="../assets/img/logo.png" />
+      <div class="menu-div">
+        <button class="home-button">
+          <div class="home-rectangle-div"></div>
+          <h1 class="home-h1">Home</h1></button
+        ><button class="home-button">
+          <div class="login-rectangle-div"></div>
+          <h1 class="login-h1">Login</h1>
+        </button>
+      </div>
+    </header> -->
     <div class="frame-div">
-      <img
-        class="fondo-login-1-icon"
-        alt=""
-        src="public/fondo-login-1@2x.png"
-      />
-      <footer class="footer-login">
-        <div class="rectangle-div"></div>
-        <h1 class="info-footer-h1">Todos los derechos reservados</h1>
-      </footer>
       <form class="signup-menu-form">
         <article class="cajita-article"></article>
         <button class="botones-button">
@@ -46,21 +95,10 @@
         <h2 class="usuario-h2">Usuario</h2>
         <h1 class="registrarse-h1">Registrarse</h1>
       </form>
-      <header class="navbar-header">
-        <div class="header-div"></div>
-        <img class="nelo-logo-icon" alt="" src="../assets/img/logo.png" />
-        <div class="menu-div">
-          <button class="home-button">
-            <div class="home-rectangle-div"></div>
-            <h1 class="home-h1">Home</h1></button
-          ><button class="home-button">
-            <div class="login-rectangle-div"></div>
-            <h1 class="login-h1">Login</h1>
-          </button>
-        </div>
-      </header>
     </div>
+    <footer>
+      <h5 class="center">Todos los derechos reservados</h5>
+  </footer>
 
-    <script></script>
   </body>
 </html>
