--- a/index.html
+++ b/index.html
@@ -193,7 +193,20 @@
         </section>
         <!-- FOOTER -->
         <footer>
-            <h5 class="center">Todos los derechos reservados</h5>
+            <div class="footer-container flex flex-column align-center">
+                <div class="footer-logo">
+                    <img src="./assets/img/logo.png" alt="" class="img-100" />
+                </div>
+                <h5 class="center">Todos los derechos reservados</h5>
+                <div class="socials">
+                    <h4 class="center">Redes</h4>
+                    <div class="socials-icons flex justify-center">
+                        <img src="./assets/img/whatsapp.png" alt="whatsapp" />
+                        <img src="./assets/img/facebook.png" alt="facebook" />
+                        <img src="./assets/img/instagram.png" alt="instagram" />
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
