--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                   
                 </p>
+                
                 <a href="#">
                     <button class="btn">Conócenos más ></button>
                 </a>
@@ -98,6 +100,16 @@
                 <p class="center">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <h2 class="center">Integrantes:</h2>
+                <p class="center">
+                    Juan Ospina<br>
+                    Angel Urriola<br>
+                    Isaias Rodriguez<br>
+                    Cecilia Gonzales<br>
+                    Alessandra Canales<br>
+                    Angelis Linares<br>
+                    Alessandro Marconi
                 </p>
             </div>
         </section>
@@ -193,20 +205,7 @@
         </section>
         <!-- FOOTER -->
         <footer>
-            <div class="footer-container flex flex-column align-center">
-                <div class="footer-logo">
-                    <img src="./assets/img/logo.png" alt="" class="img-100" />
-                </div>
-                <h5 class="center">Todos los derechos reservados</h5>
-                <div class="socials">
-                    <h4 class="center">Redes</h4>
-                    <div class="socials-icons flex justify-center">
-                        <img src="./assets/img/whatsapp.png" alt="whatsapp" />
-                        <img src="./assets/img/facebook.png" alt="facebook" />
-                        <img src="./assets/img/instagram.png" alt="instagram" />
-                    </div>
-                </div>
-            </div>
+            <h5 class="center">Todos los derechos reservados</h5>
         </footer>
     </body>
 </html>
