link css folders

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -6,8 +6,8 @@
     <title></title>
     <meta name="description" content="" />
 
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./login.css" />
+    <link rel="stylesheet" href="../assets/global.css">
+    <link rel="stylesheet" href="../assets/login.css">
 
     <link
       rel="stylesheet"
@@ -23,11 +23,11 @@
       <img
         class="fondo-login-1-icon"
         alt=""
-        src="public/fondo-login-1@2x.png"
+        src="../assets/img/fondo-login-1@2x.png"
       />
       <header class="header">
         <div class="headercont-div">
-          <img class="nelo-logo-icon" alt="" src="public/nelo-logo@2x.png" />
+          <img class="nelo-logo-icon" alt="" src="../assets/img/nelo-logo@2x.png" />
           <div class="headerbutton-div">
             <div class="buttoncont-div">
               <div class="regitrarse-button-div">
