--- a/frontend/pages/registrarse.html
+++ b/frontend/pages/registrarse.html
@@ -6,8 +6,8 @@
     <title></title>
     <meta name="description" content="" />
 
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./Register.css" />
+    <link rel="stylesheet" href="../assets/global.css">
+    <link rel="stylesheet" href="../assets/Register.css">
 
     <link
       rel="stylesheet"
@@ -23,11 +23,11 @@
       <img
         class="fondo-login-1-icon1"
         alt=""
-        src="public/fondo-login-1@2x.png"
+        src="../assets/img/fondo-login-1@2x.png"
       />
       <header class="header1">
         <div class="headercont-div1">
-          <img class="nelo-logo-icon1" alt="" src="public/nelo-logo@2x.png" />
+          <img class="nelo-logo-icon1" alt="" src="../assets/img/nelo-logo@2x.png" />
           <div class="headerbutton-div1">
             <div class="buttoncont-div1">
               <div class="regitrarse-button-div1">
