--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -44,7 +44,7 @@
         <div class="formcont-div">
           <form class="form">
             <div class="iniciar-session-div">
-              <h2 class="inciair-session-h2">Inciair Session</h2>
+              <h2 class="inciair-session-h2">Iniciar Sesion</h2>
             </div>
             <div class="correo-div">
               <input
@@ -63,7 +63,7 @@
               />
             </div>
             <button class="iniciar-session-button">
-              <div class="iniciar-session-div1">Iniciar Session</div>
+              <div class="iniciar-session-div1">Iniciar Sesion</div>
             </button>
           </form>
         </div>
