--- a/frontend/pages/registrarse.html
+++ b/frontend/pages/registrarse.html
@@ -1,124 +1,137 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title></title>
-    <meta name="description" content="" />
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="initial-scale=1, width=device-width" />
+        <title></title>
+        <meta name="description" content="" />
 
-    <link rel="stylesheet" href="../assets/global.css">
-    <link rel="stylesheet" href="../assets/Register.css">
+        <link rel="stylesheet" href="../assets/global.css" />
+        <link rel="stylesheet" href="../assets/Register.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Glory:wght@700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
-    />
-  </head>
-  <body>
-    <div class="register-div">
-      <img
-        class="fondo-login-1-icon1"
-        alt=""
-        src="../assets/img/fondo-login-1@2x.png"
-      />
-      <header class="header1">
-        <div class="headercont-div1">
-          <img class="nelo-logo-icon1" alt="" src="../assets/img/nelo-logo@2x.png" />
-          <div class="headerbutton-div1">
-            <div class="buttoncont-div1">
-              <div class="regitrarse-button-div1">
-                <button class="login-button">Login</button>
-              </div>
-              <div class="regitrarse-button-div1">
-                <button class="login-button">Home</button>
-              </div>
-            </div>
-          </div>
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Glory:wght@700&display=swap"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+        />
+    </head>
+    <body>
+        <div class="register-div">
+            <img
+                class="fondo-login-1-icon1"
+                alt=""
+                src="../assets/img/fondo-login-1@2x.png"
+            />
+            <header class="header1">
+                <div class="headercont-div1">
+                    <img
+                        class="nelo-logo-icon1"
+                        alt=""
+                        src="../assets/img/nelo-logo@2x.png"
+                    />
+                    <div class="headerbutton-div1">
+                        <div class="buttoncont-div1">
+                            <div class="regitrarse-button-div1">
+                                <button class="login-button">Login</button>
+                            </div>
+                            <div class="regitrarse-button-div1">
+                                <button class="login-button">Home</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <section class="sectioncont1">
+                <div class="formcont-div1">
+                    <form class="form1" id="form" method="post">
+                        <div class="registrarse-div">
+                            <h2 class="registrarse-h2">Registrarse</h2>
+                        </div>
+                        <div class="nombre-div">
+                            <input
+                                class="nombre-input"
+                                type="text"
+                                placeholder="Nombre"
+                                required
+                                id="nombre"
+                            />
+                        </div>
+                        <div class="nombre-div">
+                            <input
+                                class="nombre-input"
+                                type="text"
+                                placeholder="Apellido"
+                                required
+                                id="apellido"
+                            />
+                        </div>
+                        <div class="nombre-div">
+                            <input
+                                class="nombre-input"
+                                type="text"
+                                placeholder="Cedula"
+                                required
+                                id="cedula"
+                            />
+                        </div>
+                        <div class="nombre-div">
+                            <input
+                                class="nombre-input"
+                                type="text"
+                                placeholder="Direción"
+                                required
+                                id="direccion"
+                            />
+                        </div>
+                        <div class="nombre-div">
+                            <input
+                                class="nombre-input"
+                                type="text"
+                                placeholder="Correo"
+                                required
+                                id="correo"
+                            />
+                        </div>
+                        <div class="nombre-div">
+                            <input
+                                class="nombre-input"
+                                type="password"
+                                placeholder="Contraseña"
+                                required
+                                id="password"
+                            />
+                        </div>
+                        <div class="nombre-div">
+                            <input
+                                class="nombre-input"
+                                type="password"
+                                placeholder="Confirmar Contraseña"
+                                required
+                                id="password-validate"
+                            />
+                        </div>
+                        <div class="frame-div">
+                            <input class="rectangle-input" type="checkbox" required />
+                            <div class="terminos-div">
+                                Acepto los terminos y condiciones
+                            </div>
+                        </div>
+                        <button class="registrarse-button" type="submit">
+                            <div class="registrarse-div1">Registrarse</div>
+                        </button>
+                    </form>
+                </div>
+            </section>
+            <footer class="footer1">
+                <div class="todos-los-derechos-reservados1">
+                    Todos los derechos reservados
+                </div>
+            </footer>
         </div>
-      </header>
-      <section class="sectioncont1">
-        <div class="formcont-div1">
-          <form class="form1">
-            <div class="registrarse-div">
-              <h2 class="registrarse-h2">Registrarse</h2>
-            </div>
-            <div class="nombre-div">
-              <input
-                class="nombre-input"
-                type="text"
-                placeholder="Nombre"
-                required
-              />
-            </div>
-            <div class="nombre-div">
-              <input
-                class="nombre-input"
-                type="text"
-                placeholder="Apellido"
-                required
-              />
-            </div>
-            <div class="nombre-div">
-              <input
-                class="nombre-input"
-                type="number"
-                placeholder="Cedula"
-                required
-              />
-            </div>
-            <div class="nombre-div">
-              <input
-                class="nombre-input"
-                type="text"
-                placeholder="Direción"
-                required
-              />
-            </div>
-            <div class="nombre-div">
-              <input
-                class="nombre-input"
-                type="text"
-                placeholder="Correo"
-                required
-              />
-            </div>
-            <div class="nombre-div">
-              <input
-                class="nombre-input"
-                type="password"
-                placeholder="Contraseña"
-                required
-              />
-            </div>
-            <div class="nombre-div">
-              <input
-                class="nombre-input"
-                type="password"
-                placeholder="Confirmar Contraseña"
-                required
-              />
-            </div>
-            <div class="frame-div">
-              <input class="rectangle-input" type="checkbox" required />
-              <div class="terminos-div">Acepto los terminos y condiciones</div>
-            </div>
-            <button class="registrarse-button">
-              <div class="registrarse-div1">Registrarse</div>
-            </button>
-          </form>
-        </div>
-      </section>
-      <footer class="footer1">
-        <div class="todos-los-derechos-reservados1">
-          Todos los derechos reservados
-        </div>
-      </footer>
-    </div>
 
-    <script></script>
-  </body>
+        <script src="../js/register.js"></script>
+    </body>
 </html>
